**************************************************************
** MovieJukebox Release note
***************************************************************

MovieJukebox 1.8 BETA
---------------------
  - Enhancement	  #145 Dual Language-Flag for DVDs
  - Enhancement   #400 Option to trim plot length for TheTVDB plots
  - Fixed defect  #945 imdb.getCertificationFromMPAA setting is ignored if mpaa tag is present in the NFO
  - Fixed defect #1006 Wrong fanart file name if NFO <fanart> field filled in link
  - Fixed defect #1156 BAd forma date with plugin mjb.internet.plugin=com.moviejukebox.plugin.FilmUpITPlugin  
  - Enhancement  #1175 Also detect PGS subtiltes  
  - Fixed defect #1187 Trailing '|' character in IMDB plots
  - Fixed defect #1190 IMDb parser gets wrong title for movie with parentheses
  - Enhancement  #1188 Add support for Danish language tag in the filename
  - Fixed defect #1194 NFO fileinfo streamdetails are not overriding the MediaInfo scraped information
  - Fixed defect #1202 Standardised plot length across plugins
  - Fixed defect #1204 Video output in the YAMJ generated XML file is always 'UNKNOWN 60Hz'
  - Fixed defect #1205 Video Output does not use MediaInfo information
  - Fixed defect #1211 Audio channels always UNKNOWN
  - Fixed defect #1221 Audio information defect in XML files
  - Fixed defect #1224 Google/Yahoo thread defaults too high, reduced to 5 each
  - Fixed defect #1229 CSV listing fields may have quotes inside them
  - Fixed defect #1230 Add fanart detection to FilmUpIT plugin
  - Fixed defect #1232 Subtitle field incorrect for mkv embedded subs
  - Fixed defect #1233 Allocine plugin IOException
  - Fixed defect #1237 PlayOnHD: VIDEO_TS.IFO missing in link for DVD movies
  - Fixed defect #1241 Movie size for folder-movies (BluRay, AVCHD, etc.) always "0Bytes"
  

MovieJukebox 1.7
----------------
  - Enhancement   #358 Intuitive movie highlight when surfing up/down pages in the movies index (default skin)